--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".PlayPage"></activity>
         <activity android:name=".MusicsPage" />
         <activity android:name=".SettingsPage" />
         <activity android:name=".ThemePage" />
         <activity android:name=".Map1Page" />
         <activity android:name=".HomePage" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".AchievementsPage">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
