--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PlayPage"></activity>
+        <activity android:name=".LevelPage"></activity>
+        <activity android:name=".PlayPage" />
         <activity android:name=".MusicsPage" />
         <activity android:name=".SettingsPage" />
         <activity android:name=".ThemePage" />
