--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LevelPage"></activity>
-        <activity android:name=".Level1Page"></activity>
+        <activity android:name=".Level2Page"></activity>
+        <activity android:name=".LevelPage" />
+        <activity android:name=".Level1Page" />
         <activity android:name=".PlayPage" />
         <activity android:name=".MusicsPage" />
         <activity android:name=".SettingsPage" />
