--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Level6Page"></activity>
+        <activity android:name=".Level7Page"></activity>
+        <activity android:name=".Level6Page" />
         <activity android:name=".Level5Page" />
         <activity android:name=".Level1Page" />
         <activity android:name=".Level3Page" />
