--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Level8Page"></activity>
+        <activity android:name=".FirstPage"></activity>
+        <activity android:name=".Level8Page" />
         <activity android:name=".Level7Page" />
         <activity android:name=".Level6Page" />
         <activity android:name=".Level5Page" />
@@ -24,7 +25,7 @@
         <activity android:name=".ThemePage" />
         <activity android:name=".HomePage" />
         <activity android:name=".AchievementsPage" />
-        <activity android:name=".FirstPage">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
