--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreativeMode"/>
+        <activity android:name=".Level9Page"></activity>
+        <activity android:name=".InstructionsPage" />
+        <activity android:name=".CreativeMode" />
         <activity android:name=".FirstPage" />
         <activity android:name=".Level8Page" />
         <activity android:name=".Level7Page" />
