--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,26 +9,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Level9Page"></activity>
-        <activity android:name=".InstructionsPage" />
-        <activity android:name=".CreativeMode" />
-        <activity android:name=".FirstPage" />
-        <activity android:name=".Level8Page" />
-        <activity android:name=".Level7Page" />
-        <activity android:name=".Level6Page" />
-        <activity android:name=".Level5Page" />
-        <activity android:name=".Level1Page" />
-        <activity android:name=".Level3Page" />
-        <activity android:name=".Level2Page" />
-        <activity android:name=".LevelPage" />
-        <activity android:name=".Level4Page" />
-        <activity android:name=".PlayPage" />
-        <activity android:name=".MusicsPage" />
-        <activity android:name=".SettingsPage" />
-        <activity android:name=".ThemePage" />
-        <activity android:name=".HomePage" />
-        <activity android:name=".AchievementsPage" />
-        <activity android:name=".SplashScreen">
+        <activity android:name="com.example.educational.Level9Page"></activity>
+        <activity android:name="com.example.menu.InstructionsPage" />
+        <activity android:name="com.example.creative.CreativeMode" />
+        <activity android:name="com.example.menu.FirstPage" />
+        <activity android:name="com.example.educational.Level8Page" />
+        <activity android:name="com.example.educational.Level7Page" />
+        <activity android:name="com.example.educational.Level6Page" />
+        <activity android:name="com.example.educational.Level5Page" />
+        <activity android:name="com.example.educational.Level1Page" />
+        <activity android:name="com.example.educational.Level3Page" />
+        <activity android:name="com.example.educational.Level2Page" />
+        <activity android:name="com.example.educational.LevelPage" />
+        <activity android:name="com.example.educational.Level4Page" />
+        <activity android:name="com.example.menu.PlayPage" />
+        <activity android:name="com.example.menu.MusicsPage" />
+        <activity android:name="com.example.menu.SettingsPage" />
+        <activity android:name="com.example.menu.ThemePage" />
+        <activity android:name="com.example.menu.HomePage" />
+        <activity android:name="com.example.menu.AchievementsPage" />
+        <activity android:name="com.example.menu.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
